@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,8 @@ import java.util.List;
 import java.util.concurrent.Executor;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
+
+import org.jspecify.annotations.Nullable;
 
 import org.springframework.aop.interceptor.AsyncUncaughtExceptionHandler;
 import org.springframework.beans.factory.ObjectProvider;
@@ -29,7 +30,6 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.ImportAware;
 import org.springframework.core.annotation.AnnotationAttributes;
 import org.springframework.core.type.AnnotationMetadata;
-import org.springframework.lang.Nullable;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.function.SingletonSupplier;
 
@@ -46,14 +46,11 @@ import org.springframework.util.function.SingletonSupplier;
 @Configuration(proxyBeanMethods = false)
 public abstract class AbstractAsyncConfiguration implements ImportAware {
 
-	@Nullable
-	protected AnnotationAttributes enableAsync;
+	protected @Nullable AnnotationAttributes enableAsync;
 
-	@Nullable
-	protected Supplier<Executor> executor;
+	protected @Nullable Supplier<? extends @Nullable Executor> executor;
 
-	@Nullable
-	protected Supplier<AsyncUncaughtExceptionHandler> exceptionHandler;
+	protected @Nullable Supplier<? extends @Nullable AsyncUncaughtExceptionHandler> exceptionHandler;
 
 
 	@Override
@@ -70,9 +67,10 @@ public abstract class AbstractAsyncConfiguration implements ImportAware {
 	 * Collect any {@link AsyncConfigurer} beans through autowiring.
 	 */
 	@Autowired
+	@SuppressWarnings("NullAway") // https://github.com/uber/NullAway/issues/1126
 	void setConfigurers(ObjectProvider<AsyncConfigurer> configurers) {
-		Supplier<AsyncConfigurer> configurer = SingletonSupplier.of(() -> {
-			List<AsyncConfigurer> candidates = configurers.stream().collect(Collectors.toList());
+		SingletonSupplier<AsyncConfigurer> configurer = SingletonSupplier.ofNullable(() -> {
+			List<AsyncConfigurer> candidates = configurers.stream().toList();
 			if (CollectionUtils.isEmpty(candidates)) {
 				return null;
 			}
@@ -85,7 +83,7 @@ public abstract class AbstractAsyncConfiguration implements ImportAware {
 		this.exceptionHandler = adapt(configurer, AsyncConfigurer::getAsyncUncaughtExceptionHandler);
 	}
 
-	private <T> Supplier<T> adapt(Supplier<AsyncConfigurer> supplier, Function<AsyncConfigurer, T> provider) {
+	private <T> Supplier<@Nullable T> adapt(SingletonSupplier<AsyncConfigurer> supplier, Function<AsyncConfigurer, @Nullable T> provider) {
 		return () -> {
 			AsyncConfigurer configurer = supplier.get();
 			return (configurer != null ? provider.apply(configurer) : null);
