@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,8 +20,6 @@ import java.io.IOException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
@@ -32,15 +30,14 @@ import org.skyscreamer.jsonassert.JSONAssert;
 import org.skyscreamer.jsonassert.JSONCompareMode;
 
 import org.springframework.aot.hint.ExecutableMode;
-import org.springframework.aot.hint.JavaSerializationHints;
 import org.springframework.aot.hint.MemberCategory;
 import org.springframework.aot.hint.ProxyHints;
 import org.springframework.aot.hint.ReflectionHints;
 import org.springframework.aot.hint.ResourceHints;
 import org.springframework.aot.hint.RuntimeHints;
+import org.springframework.aot.hint.SerializationHints;
 import org.springframework.aot.hint.TypeReference;
 import org.springframework.core.codec.StringDecoder;
-import org.springframework.util.MimeType;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -48,11 +45,14 @@ import static org.assertj.core.api.Assertions.assertThat;
  * Tests for {@link FileNativeConfigurationWriter}.
  *
  * @author Sebastien Deleuze
+ * @author Janne Valkealahti
+ * @author Sam Brannen
  */
-public class FileNativeConfigurationWriterTests {
+class FileNativeConfigurationWriterTests {
 
 	@TempDir
 	static Path tempDir;
+
 
 	@Test
 	void emptyConfig() {
@@ -66,15 +66,18 @@ public class FileNativeConfigurationWriterTests {
 	void serializationConfig() throws IOException, JSONException {
 		FileNativeConfigurationWriter generator = new FileNativeConfigurationWriter(tempDir);
 		RuntimeHints hints = new RuntimeHints();
-		JavaSerializationHints serializationHints = hints.javaSerialization();
+		SerializationHints serializationHints = hints.serialization();
 		serializationHints.registerType(Integer.class);
 		serializationHints.registerType(Long.class);
 		generator.write(hints);
 		assertEquals("""
-				[
-					{ "name": "java.lang.Integer" },
-					{ "name": "java.lang.Long" }
-				]""", "serialization-config.json");
+				{
+					"serialization": [
+						{ "type": "java.lang.Integer" },
+						{ "type": "java.lang.Long" }
+					]
+				}
+				""");
 	}
 
 	@Test
@@ -86,10 +89,13 @@ public class FileNativeConfigurationWriterTests {
 		proxyHints.registerJdkProxy(Function.class, Consumer.class);
 		generator.write(hints);
 		assertEquals("""
-				[
-					{ "interfaces": [ "java.util.function.Function" ] },
-					{ "interfaces": [ "java.util.function.Function", "java.util.function.Consumer" ] }
-				]""", "proxy-config.json");
+				{
+					"reflection": [
+						{ type: {"proxy": [ "java.util.function.Function" ] } },
+						{ type: {"proxy": [ "java.util.function.Function", "java.util.function.Consumer" ] } }
+					]
+				}
+				""");
 	}
 
 	@Test
@@ -97,57 +103,57 @@ public class FileNativeConfigurationWriterTests {
 		FileNativeConfigurationWriter generator = new FileNativeConfigurationWriter(tempDir);
 		RuntimeHints hints = new RuntimeHints();
 		ReflectionHints reflectionHints = hints.reflection();
-		reflectionHints.registerType(StringDecoder.class, builder -> {
-			builder
-					.onReachableType(TypeReference.of(String.class))
-					.withMembers(MemberCategory.PUBLIC_FIELDS, MemberCategory.DECLARED_FIELDS,
-							MemberCategory.INTROSPECT_PUBLIC_CONSTRUCTORS, MemberCategory.INTROSPECT_DECLARED_CONSTRUCTORS,
-							MemberCategory.INVOKE_PUBLIC_CONSTRUCTORS, MemberCategory.INVOKE_DECLARED_CONSTRUCTORS,
-							MemberCategory.INTROSPECT_PUBLIC_METHODS, MemberCategory.INTROSPECT_DECLARED_METHODS,
-							MemberCategory.INVOKE_PUBLIC_METHODS, MemberCategory.INVOKE_DECLARED_METHODS,
-							MemberCategory.PUBLIC_CLASSES, MemberCategory.DECLARED_CLASSES)
-					.withField("DEFAULT_CHARSET", fieldBuilder -> {})
-					.withField("defaultCharset", fieldBuilder -> {
-						fieldBuilder.allowWrite(true);
-						fieldBuilder.allowUnsafeAccess(true);
-					})
-					.withConstructor(List.of(TypeReference.of(List.class), TypeReference.of(boolean.class), TypeReference.of(MimeType.class)), constructorHint ->
-							constructorHint.withMode(ExecutableMode.INTROSPECT))
-					.withMethod("setDefaultCharset", List.of(TypeReference.of(Charset.class)), ctorBuilder -> {})
-					.withMethod("getDefaultCharset", Collections.emptyList(), constructorHint ->
-							constructorHint.withMode(ExecutableMode.INTROSPECT));
-		});
+		reflectionHints.registerType(StringDecoder.class, builder -> builder
+				.onReachableType(String.class)
+				.withMembers(MemberCategory.ACCESS_PUBLIC_FIELDS, MemberCategory.ACCESS_DECLARED_FIELDS,
+						MemberCategory.INVOKE_PUBLIC_CONSTRUCTORS, MemberCategory.INVOKE_DECLARED_CONSTRUCTORS,
+						MemberCategory.INVOKE_PUBLIC_METHODS, MemberCategory.INVOKE_DECLARED_METHODS)
+				.withField("DEFAULT_CHARSET")
+				.withField("defaultCharset")
+				.withMethod("setDefaultCharset", TypeReference.listOf(Charset.class), ExecutableMode.INVOKE));
 		generator.write(hints);
 		assertEquals("""
-				[
-					{
-						"name": "org.springframework.core.codec.StringDecoder",
-						"condition": { "typeReachable": "java.lang.String" },
-						"allPublicFields": true,
-						"allDeclaredFields": true,
-						"queryAllPublicConstructors": true,
-						"queryAllDeclaredConstructors": true,
-						"allPublicConstructors": true,
-						"allDeclaredConstructors": true,
-						"queryAllPublicMethods": true,
-						"queryAllDeclaredMethods": true,
-						"allPublicMethods": true,
-						"allDeclaredMethods": true,
-						"allPublicClasses": true,
-						"allDeclaredClasses": true,
-						"fields": [
-							{ "name": "DEFAULT_CHARSET" },
-							{ "name": "defaultCharset", "allowWrite": true, "allowUnsafeAccess": true }
-						],
-						"methods": [
-							{ "name": "setDefaultCharset", "parameterTypes": [ "java.nio.charset.Charset" ] }
-						],
-						"queriedMethods":  [
-							{ "name": "<init>", "parameterTypes": [ "java.util.List", "boolean", "org.springframework.util.MimeType" ] },
-							{ "name": "getDefaultCharset", "parameterTypes": [ ] }
-						]
-					}
-				]""", "reflect-config.json");
+				{
+					"reflection": [
+						{
+							"type": "org.springframework.core.codec.StringDecoder",
+							"condition": { "typeReached": "java.lang.String" },
+							"allPublicFields": true,
+							"allDeclaredFields": true,
+							"allPublicConstructors": true,
+							"allDeclaredConstructors": true,
+							"allPublicMethods": true,
+							"allDeclaredMethods": true,
+							"fields": [
+								{ "name": "DEFAULT_CHARSET" },
+								{ "name": "defaultCharset" }
+							],
+							"methods": [
+								{ "name": "setDefaultCharset", "parameterTypes": [ "java.nio.charset.Charset" ] }
+							]
+						}
+					]
+				}
+				""");
+	}
+
+	@Test
+	void jniConfig() throws IOException, JSONException {
+		// same format as reflection so just test basic file generation
+		FileNativeConfigurationWriter generator = new FileNativeConfigurationWriter(tempDir);
+		RuntimeHints hints = new RuntimeHints();
+		ReflectionHints jniHints = hints.jni();
+		jniHints.registerType(StringDecoder.class, builder -> builder.onReachableType(String.class));
+		generator.write(hints);
+		assertEquals("""
+				{
+					"jni": [
+						{
+							"type": "org.springframework.core.codec.StringDecoder",
+							"condition": { "typeReached": "java.lang.String" }
+						}
+					]
+				}""");
 	}
 
 	@Test
@@ -160,32 +166,33 @@ public class FileNativeConfigurationWriterTests {
 		generator.write(hints);
 		assertEquals("""
 				{
-					"resources": {
-						"includes": [
-							{"pattern": "\\\\Qcom/example/test.properties\\\\E"},
-							{"pattern": "\\\\Qcom/example/another.properties\\\\E"}
-						]
-					}
-				}""", "resource-config.json");
+					"resources": [
+							{"glob": "com/example/test.properties"},
+							{"glob": "/"},
+							{"glob": "com"},
+							{"glob": "com/example"},
+							{"glob": "com/example/another.properties"}
+					]
+				}""");
 	}
 
 	@Test
 	void namespace() {
 		String groupId = "foo.bar";
 		String artifactId = "baz";
-		String filename = "resource-config.json";
+		String filename = "reachability-metadata.json";
 		FileNativeConfigurationWriter generator = new FileNativeConfigurationWriter(tempDir, groupId, artifactId);
 		RuntimeHints hints = new RuntimeHints();
 		ResourceHints resourceHints = hints.resources();
 		resourceHints.registerPattern("com/example/test.properties");
 		generator.write(hints);
 		Path jsonFile = tempDir.resolve("META-INF").resolve("native-image").resolve(groupId).resolve(artifactId).resolve(filename);
-		assertThat(jsonFile.toFile().exists()).isTrue();
+		assertThat(jsonFile.toFile()).exists();
 	}
 
-	private void assertEquals(String expectedString, String filename) throws IOException, JSONException {
-		Path jsonFile = tempDir.resolve("META-INF").resolve("native-image").resolve(filename);
-		String content = new String(Files.readAllBytes(jsonFile));
+	private void assertEquals(String expectedString) throws IOException, JSONException {
+		Path jsonFile = tempDir.resolve("META-INF").resolve("native-image").resolve("reachability-metadata.json");
+		String content = Files.readString(jsonFile);
 		JSONAssert.assertEquals(expectedString, content, JSONCompareMode.NON_EXTENSIBLE);
 	}
 
